w32: Remove fallback definition of struct timespec.

* w32/npth.h [!__MINGW64_VERSION_MAJOR] (struct timespec): Remove.

--

GnuPG-bug-id: 5889
Reported-by: Eli Zaretskii
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>