w32/npth.h
@@ -37,16 +37,6 @@ extern "C" {
 
 struct msghdr;
 
-/* The mingw-w64 headers define timespec.  For older compilers we keep
-   our replacement.  */
-#ifndef __MINGW64_VERSION_MAJOR
-struct timespec {
-  long tv_sec;                 /* seconds */
-  long tv_nsec;                /* nanoseconds */
-};
-#endif /*__MINGW64_VERSION_MAJOR */
-
-
 #ifndef ETIMEDOUT
 #define ETIMEDOUT 10060  /* This is WSAETIMEDOUT.  */
 #endif
